add external client and make some clean in code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,11 @@ aws.bucketName = enigeeringbucket
 aws.accessKey = AKIA4NZEJBT6G7NFGKFX
 aws.secretKey = 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
 aws.region = us-east-2
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=slusarczyk.michal23@gmail.com
+spring.mail.password=acnyvzyiqtdzvpwg
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
