--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,11 @@
             <artifactId>aws-java-sdk-textract</artifactId>
         </dependency>
         <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/textract -->
-
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>mail</artifactId>
+            <version>1.4.7</version>
+        </dependency>
 
         <dependency>
             <groupId>com.amazonaws</groupId>
@@ -103,6 +107,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+            <version>5.3.3</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.5</version>
         </dependency>
 
     </dependencies>
