add option to remove emp from proj

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@ spring.http.multipart.enabled=true
 aws.endpointUrl = https://s3.us-east-2.amazonaws.com
 aws.textractUrl = https://textract.us-east-2.amazonaws.com
 aws.bucketName = enigeeringbucket
-aws.accessKey = AKIA4NZEJBT6G7NFGKFX
-aws.secretKey = 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
+aws.accessKey = AKIA4NZEJBT6JI3IF5L7
+aws.secretKey = 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
 aws.region = us-east-2
 
 spring.mail.host=smtp.gmail.com
@@ -24,3 +24,4 @@ spring.mail.password=acnyvzyiqtdzvpwg
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
