--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -4,5 +4,10 @@
       "name": "spring.http.multipart.enabled",
       "type": "java.lang.String",
       "description": "Description for spring.http.multipart.enabled."
-  }
-] }
+    },
+    {
+      "name": "spring.kafka.producer.value-deserializer",
+      "type": "java.lang.String",
+      "description": "Description for spring.kafka.producer.value-deserializer."
+    }
+  ] }
