--- a/OneDrive/Pulpit/Praca_inż_KOD/Backend/src/main/resources/application.properties
+++ b/OneDrive/Pulpit/Praca_inż_KOD/Backend/src/main/resources/application.properties
@@ -1,21 +1,23 @@
 spring.data.mongodb.database=engineer
 
+elasticsearch.clustername=mikele
+elasticsearch.host=localhost
+elasticsearch.port=9300
 
-elasticsearch.clustername = mikele
-elasticsearch.host = localhost
-elasticsearch.port = 9300
+jwt.secret=mikele
 
-jwt.secret= mikele
 spring.servlet.multipart.max-file-size=128MB
 spring.servlet.multipart.max-request-size=128MB
 spring.http.multipart.enabled=true
 
-aws.endpointUrl = https://s3.us-east-2.amazonaws.com
-aws.textractUrl = https://textract.us-east-2.amazonaws.com
-aws.bucketName = enigeering
-aws.accessKey = AKIAVA6G5DPMMP62A7GA
-aws.secretKey = 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
-aws.region = us-east-2
+wise.token=2bf4b3fd-1714-4a92-a757-1ba692c50ac2
+
+aws.endpointUrl=https://s3.us-east-2.amazonaws.com
+aws.textractUrl=https://textract.us-east-2.amazonaws.com
+aws.bucketName=enigeering
+aws.accessKey=AKIAVA6G5DPMMP62A7GA
+aws.secretKey=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
+aws.region=us-east-2
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
@@ -29,4 +31,4 @@ spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.group-id=myGroup
 spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
-spring.kafka.consumer.properties.spring.json.trusted.packages= *
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
